TestCases/PodSecurityPolicy/allowSeccomp/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: seccomp
tests:
  - name: default-seccomp-required
    template: ../../../PodSecurityPolicy/allowSeccomp/constraintTemplate.yaml
    constraint: ../../../PodSecurityPolicy/allowSeccomp/constraint.yaml
    cases:
    - name: example-disallowed-global
      object: example/example_disallowed2.yaml
      assertions:
      - violations: 1
        message: "Seccomp profile 'unconfined' is not allowed for container 'nginx'. Found at: annotation seccomp.security.alpha.kubernetes.io/pod"
    - name: example-disallowed-container
      object: example/example_disallowed.yaml
      assertions:
      - violations: 1
        message: "Seccomp profile 'unconfined' is not allowed for container 'nginx'. Found at: annotation container.seccomp.security.alpha.kubernetes.io/nginx"
    - name: example-allowed-container
      object: example/example_allowed.yaml
      assertions:
      - violations: no
    - name: example-allowed-global
      object: example/example_allowed2.yaml
      assertions:
      - violations: no
    - name: disallowed-ephemeral
      object: example/disallowed_ephemeral.yaml
      assertions:
      - violations: 1
        message: "Seccomp profile 'unconfined' is not allowed for container 'nginx'. Found at: annotation container.seccomp.security.alpha.kubernetes.io/nginx"
